correct height on ios for pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  -webkit-overflow-scrolling: touch;
 
   & .page {
     flex: 1;
