--- a/src/pages/assets/AssetsOverview.module.scss
+++ b/src/pages/assets/AssetsOverview.module.scss
@@ -3,6 +3,16 @@
 
 .overviewPage {
   color: var(--mirage);
+
+  @include responsive('phone-xs', 'phone') {
+    height: 100vh;
+    // height: calc(var(--vh, 1vh) * 100 );
+    overflow-y: auto;
+    overflow-y: overlay;
+    -webkit-overflow-scrolling: touch;
+    padding-bottom: 0 !important;
+    margin-bottom: 60px;
+  }
 }
 
 .section {
